--- a/front/src/app/task-detail/task-detail.component.html
+++ b/front/src/app/task-detail/task-detail.component.html
@@ -5,7 +5,7 @@
         <label for="task-name">Название: </label>
         <input id="task-name" [(ngModel)]="task.description" placeholder="name">
     </div> -->
-    
+
     <mat-form-field class="example-form-field">
       <mat-label>Введите новое название</mat-label>
       <input
@@ -21,7 +21,7 @@
         </button>
       }
     </mat-form-field>
-      
+
     <mat-form-field class="example-form-field">
       <mat-label>Введите новое описание</mat-label>
       <input
@@ -33,6 +33,22 @@
       >
       @if (task.description) {
         <button matSuffix mat-icon-button aria-label="Clear" (click)="task.description=''">
+          <mat-icon>close</mat-icon>
+        </button>
+      }
+    </mat-form-field>
+
+    <mat-form-field class="example-form-field">
+      <mat-label>Введите новый тариф</mat-label>
+      <input
+        matInput
+        [(ngModel)]="task.tariff"
+        type="text"
+        (keyup.enter)="save();"
+        id="addItemInput3"
+      >
+      @if (task.tariff) {
+        <button matSuffix mat-icon-button aria-label="Clear" (click)="task.tariff=''">
           <mat-icon>close</mat-icon>
         </button>
       }
